Java 11 & Gradle 🚀 (#106)
* Use java.util.Base64 when encoding basic auth

* gradle 5 and java 11 w/ tests working

* travis 11

* explicit build

* include gradle

* update wrapper

* use findProperty for user/pass in auth

* skip signing unless uploading

* fix warnings

* remove unnncessary warning suppression

* v5.0.0

* add project level gradle.properties

* update docs

* correction to readme

* update license year

* move version, other properties to gradle.properties

* fix function that was clearly broken according to linter